@@ -3,6 +3,7 @@ package use_case.search;
 import entity.Song;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SearchInteractor  implements SearchInputDataBoundary {
     private final SearchUserDataAccessInterface dataAccess;
@@ -22,11 +23,10 @@ public class SearchInteractor  implements SearchInputDataBoundary {
             List<SearchOutputData.SongResult> results = songs.stream()
                     .map(song -> new SearchOutputData.SongResult(
                             song.getId(),
-                            song.getTitle(),
-                            song.getArtistName(),
-                            song.getAlbumName()
+                            song.getName(),
+                            song.getArtist()
                     ))
-                    .toList();
+                    .collect(Collectors.toList());
 
             presenter.prepareSuccessView(new SearchOutputData(results));
 
